--- a/catalog-app/composer.json
+++ b/catalog-app/composer.json
@@ -10,7 +10,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/scout": "^10.5",
         "laravel/tinker": "^2.8",
+        "meilisearch/meilisearch-php": "^1.4",
         "spatie/laravel-data": "^3.9"
     },
     "require-dev": {
